# openproject-tool

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/: add-custom-field.md
docs/: handoff-op-commits-gitlab-implementation.md  spike-op-commits-gitlab.md
src/op/: actions.py  api.py  cli.py  commits.py  config.py  date_shortcuts.py  html_to_markdown.py  logging_setup.py  models.py  perms.py  perms_queue.py  queue.py  search.py
src/op/tui/: app.py  applying_screen.py  calendar_modal.py  comment_modal.py  detail_screen.py  filter_screen.py  ignore_list_screen.py  keybindings.py  main_screen.py  perms_app.py  perms_applying_screen.py  perms_detail_screen.py  perms_group_detail_screen.py  perms_groups_screen.py  perms_new_user_modal.py  perms_projects_screen.py  perms_review_screen.py  picker_widget.py  project_filter_screen.py  review_screen.py  selection.py  update_form.py  update_modal.py
tests/: test_actions.py  test_api.py  test_app_state.py  test_applying_screen.py  test_calendar_modal.py  test_cli.py  test_commits.py  test_commits_api.py  test_commits_cli.py  test_config.py  test_date_shortcuts.py  test_detail_screen.py  test_filter_screen.py  test_html_to_markdown.py  test_logging.py  test_models.py  test_perms.py  test_perms_api.py  test_perms_queue.py  test_perms_tui.py  test_picker_widget.py  test_project_filter_screen.py  test_queue.py  test_review_screen.py  test_search.py  test_selection.py  test_tui_main.py  test_update_form.py  test_update_modal.py
