[project]
name = "openproject-tool"
version = "0.1.0"
description = "Fast, keyboard-driven CLI and TUI for OpenProject"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Daniel Steinberger", email = "Daniel.Steinberger@dvs.ag" }]
keywords = ["openproject", "cli", "tui", "textual", "project-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "tomlkit>=0.13",
]

[project.urls]
Homepage = "https://github.com/Daniel-Steinberger/openproject-tool"
Repository = "https://github.com/Daniel-Steinberger/openproject-tool"
Issues = "https://github.com/Daniel-Steinberger/openproject-tool/issues"

[project.scripts]
op = "op.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-textual-snapshot>=1.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/op"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]
